--- a/class/index.html
+++ b/class/index.html
@@ -931,10 +931,24 @@
     <div class="homeButton" onclick="goHome()"><span>5</span></div>
   </div>
   <div id="studentData">
-    <p id="dateAdded"></p>
-    <p id="firstName"></p>
-    <p id="lastName"></p>
-    <p id="fullName"></p>
+    <p>dateAdded: <span id="dateAdded" style="color:white"></span></p>
+    <p>id: <span id="studentID" style="color:white"></span></p>
+    <p>firstName: <span id="firstName" style="color:white"></span></p>
+    <p>lastName: <span id="lastName" style="color:white"></span></p>
+    <p>birthdayMonth: <span id="birthdayMonth" style="color:white"></span></p>
+    <p>birthdayDate: <span id="birthdayDate" style="color:white"></span></p>
+    <p>birthdayNumber: <span id="birthdayNumber" style="color:white"></span></p>
+    <p>hasBirthday: <span id="hasBirthday" style="color:white"></span></p>
+    <p>birthdayDone: <span id="birthdayDone" style="color:white"></span></p>
+    <p>classRank: <span id="classRank" style="color:white"></span></p>
+    <p>rank: <span id="rank" style="color:white"></span></p>
+    <p>rankFactor: <span id="rankFactor" style="color:white"></span></p>
+    <p>amAtt: <span id="amAtt" style="color:white"></span></p>
+    <p>pmAtt: <span id="pmAtt" style="color:white"></span></p>
+    <p>promoted: <span id="promoted" style="color:white"></span></p>
+    <p>promotionNum: <span id="promotionNum" style="color:white"></span></p>
+    <p>as: <span id="as" style="color:white"></span></p>
+    <p>mv: <span id="mv" style="color:white"></span></p>
   </div>
 </div>
 
