--- a/class/index.html
+++ b/class/index.html
@@ -935,18 +935,29 @@
     <p>id: <span id="studentID" style="color:white"></span></p>
     <p>firstName: <span id="firstName" style="color:white"></span></p>
     <p>lastName: <span id="lastName" style="color:white"></span></p>
+    <p>fullName: <span id="fullName" style="color:white"></span></p>
+    <p>gender: <span id="gender" style="color:white"></span></p>
     <p>birthdayMonth: <span id="birthdayMonth" style="color:white"></span></p>
     <p>birthdayDate: <span id="birthdayDate" style="color:white"></span></p>
     <p>birthdayNumber: <span id="birthdayNumber" style="color:white"></span></p>
+    <p>birthday: <span id="birthday" style="color:white"></span></p>
     <p>hasBirthday: <span id="hasBirthday" style="color:white"></span></p>
     <p>birthdayDone: <span id="birthdayDone" style="color:white"></span></p>
+    <p>email: <span id="email" style="color:white"></span></p>
+    <p>notes: <span id="notes" style="color:white"></span></p>
+    <p>points: <span id="points" style="color:white"></span></p>
     <p>classRank: <span id="classRank" style="color:white"></span></p>
     <p>rank: <span id="rank" style="color:white"></span></p>
     <p>rankFactor: <span id="rankFactor" style="color:white"></span></p>
+    <p>rankName: <span id="rankName" style="color:white"></span></p>
+    <p>attendance: <span id="attendance" style="color:white"></span></p>
     <p>amAtt: <span id="amAtt" style="color:white"></span></p>
     <p>pmAtt: <span id="pmAtt" style="color:white"></span></p>
     <p>promoted: <span id="promoted" style="color:white"></span></p>
     <p>promotionNum: <span id="promotionNum" style="color:white"></span></p>
+    <p>drawing: <span id="drawing" style="color:white"></span></p>
+    <p>random: <span id="random" style="color:white"></span></p>
+    <p>asReasons: <span id="asReasons" style="color:white"></span></p>
     <p>as: <span id="as" style="color:white"></span></p>
     <p>mv: <span id="mv" style="color:white"></span></p>
   </div>
