--- a/class/index.html
+++ b/class/index.html
@@ -944,7 +944,7 @@
   </div>
   <div id="emailsNeededList"></div>
   <p id="absentEmailsNeeded">Absent:</p>
-  <div id="emailsNeededAbsent"></div>
+  <div id="emailsNeededListAbsent"></div>
 </div>
 
 <div id="dataPop" class="pop">
@@ -966,6 +966,7 @@
     <p>hasBirthday: <span id="hasBirthday" style="color:white"></span></p>
     <p>birthdayDone: <span id="birthdayDone" style="color:white"></span></p>
     <p>email: <span id="email" style="color:white"></span></p>
+    <p>photo: <span id="photo" style="color:white"></span></p>
     <p>notes: <span id="notes" style="color:white"></span></p>
     <p>points: <span id="points" style="color:white"></span></p>
     <p>classRank: <span id="classRank" style="color:white"></span></p>
