--- a/class/index.html
+++ b/class/index.html
@@ -260,7 +260,7 @@
 <div id="studentPop" class="pop">
     <div class="navigationButtonContainer">
       <div class="backButton" onclick="goHome()"><span>f</span></div>
-      <div class="secretButton" onclick="pop(['studentPop','missionsPop'],['dataPop']); loadStudentData()"></div> <!-- onclick="dataInputAlert('Set points to:',['studentPop','missionsPop'],true,setPoints)" -->
+      <div class="secretButton" onclick="pop(['studentPop','missionsPop'],['dataPop']); loadStudentData()"></div>
       <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
     <span id="dispRankName"></span> <span id="dispPts"></span><br>
@@ -275,14 +275,6 @@
         <div class="studentPopButtons" id="emailButton" onclick="populateStudentFields('editEmail')">email</div>
     </div>
 </div>
-
-<!-- <div id="studentPhotoPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton" onclick="pop(['studentPhotoPop'],['studentPop','missionsPop'])"><span>f</span></div>
-    <div class="homeButton" onclick="goHome()"><span>5</span></div>
-  </div>
-  <div id="dispStudentPhoto" onclick="photoLinks()"></div>
-</div> -->
 
 <div id="studentStatsPop" class="pop">
   <div class="navigationButtonContainer">
@@ -625,7 +617,7 @@
     <input class="textInputField1" id="editEmail" type="text" placeholder="email address"/>
   </div>
   <div class="optionButtonContainer">
-    <div class="roundButton cancelButton" onclick="pop(['editStudentPop'],['studentPop','missionsPop']); clearStudentFields()">X</div>
+    <div class="roundButton cancelButton" onclick="pop(['editStudentPop'],['studentPop','missionsPop']); flagOff(); clearStudentFields()">X</div>
     <div class="roundButton deleteButton" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
     <div class="roundButton okButton" onclick="editStudent()">V</div>
   </div>
