--- a/class/index.html
+++ b/class/index.html
@@ -13,7 +13,7 @@
 <div id="mainPop" class="pop">
       <div id="topMenuContainer">
           <div id="mainMenuButton" class="roundButton" onclick="pop(['mainPop'],['mainMenuPop'])">H</div>
-          <div id="addTeacherNoteButton" class="roundButton" onclick="pop(['mainPop'],['addTeacherNotePop'])">E</div>
+          <div id="addTeacherNoteButton" class="roundButton" onclick="pop(['mainPop'],['addTeacherNotePop','addTeacherNote'])">E</div>
           <div id="alertButton" class="roundButton" onclick="pop(['mainPop'],['alertsPop'])">#</div>
           <div id="attCountButton" class="roundButton" onclick="loadAttendees()">0</div>
           <div class="roundButton addButton" onclick="pop(['mainPop'],['newStudentPop'])">;</div>
