--- a/class/index.html
+++ b/class/index.html
@@ -900,6 +900,10 @@
       </tr>
 
       <tr>
+        <td colspan="2" id="mvText"></td>
+      </tr>
+
+      <tr>
         <td colspan="2" class="downloadOrPrint pointer" onclick="mvLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
       </tr>
 
