--- a/class/index.html
+++ b/class/index.html
@@ -89,7 +89,7 @@
             <div class="backButton" onclick="goHome()"><span>f</span></div>
           </div>
           <div class="button" id="promotionButton" onclick="pop(['alertsPop'],['promoListPop'])">Promotions</div>
-          <div class="button" id="birthdayButton" onclick="pop(['alertsPop'],['bdayPop'])">Birthdays</div>
+          <div class="button" id="birthdayButton" onclick="pop(['alertsPop'],['bdayListPop'])">Birthdays</div>
           <div class="button" id="photosNeededButton" onclick="pop(['alertsPop'],['photosNeededPop'])">Photos</div>
           <div class="button" id="emailsNeededButton" onclick="pop(['alertsPop'],['emailsNeededPop'])">Emails</div>
       </div>
@@ -268,7 +268,7 @@
         <div class="studentPopButtons" onclick="loadStudentStats()">stats</div>
         <div class="studentPopButtons" onclick="populateStudentFields(); loadStudentPhoto()">edit info</div>
         <div class="studentPopButtons" id="notesButton" onclick="pop(['studentPop','missionsPop','asPointsPop','mvPointsPop'],['notesPop','notesList']); populateNotes(['studentPop','missionsPop'])">notes</div>
-        <div class="studentPopButtons" id="photoButton" onclick="togglePhoto()">photo</div>
+        <div class="studentPopButtons" id="photoButton" onclick="actionAlert('Confirm Add/Remove Photo',['studentPop','missionsPop'],togglePhoto)">photo</div>
         <div class="studentPopButtons" onclick="loadStudentData()">properties</div>
         <div class="studentPopButtons" id="emailButton" onclick="populateStudentFields('editEmail')">email</div>
     </div>
@@ -955,9 +955,9 @@
   </div>
 </div>
 
-<div id="bdayPop" class="pop">
+<div id="bdayListPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton" onclick="pop(['bdayPop'],['alertsPop'])"><span>f</span></div>
+    <div class="backButton" onclick="pop(['bdayListPop'],['alertsPop'])"><span>f</span></div>
     <div class="homeButton" onclick="goHome()"><span>5</span></div>
   </div>
   <div id="bdayList"></div>
