--- a/class/index.html
+++ b/class/index.html
@@ -565,10 +565,47 @@
   </div>
 </div>
 
-<div id="newStudentPop" class="pop">
+<!-- <div id="newStudentPop" class="pop">
   <div>
     <p>Full Name</p>
     <input class="textInputField1" id="newFirstAndLast" type="text" placeholder="first last"/>
+  </div>
+  <div class="genderAndBdayContainer">
+    <div>
+      <p>Gender</p>
+      <input class="textInputField2 focus" id="newGender" type="text" placeholder="M or F"/>
+    </div>
+    <div style="width:75px; margin:0px"></div>
+    <div>
+      <p>Birthday</p>
+      <input class="textInputField2" id="newBday" type="text" placeholder="month day"/>
+    </div>
+  </div>
+  <div>
+    <p>Email Address</p>
+    <input class="textInputField1" id="newEmail" type="text" placeholder="email address"/>
+  </div>
+  <div>
+    <p>Note</p>
+    <textarea id="initialNote" rows="10" cols="30" placeholder="note"></textarea>
+  </div>
+  <div class="optionButtonContainer">
+    <div class="roundButton cancelButton" onclick="pop(['newStudentPop'],['mainPop']); clearStudentFields()">X</div>
+    <div class="roundButton okButton" onclick="newStudent()">V</div>
+  </div>
+</div> -->
+
+<div id="newStudentPop" class="pop">
+  <div class="genderAndBdayContainer">
+    <div>
+      <p>First Name</p>
+      <input class="textInputField3 focus" id="newFirstName" type="text" placeholder="First Name"/>
+    </div>
+    <div style="width:24px; margin:0px"></div>
+    <div>
+      <p>Last Name</p>
+      <input class="textInputField3" id="newLastName" type="text" placeholder="Last Name"/>
+    </div>
   </div>
   <div class="genderAndBdayContainer">
     <div>
