--- a/class/index.html
+++ b/class/index.html
@@ -268,7 +268,7 @@
         <div class="studentPopButtons" onclick="loadStudentStats()">stats</div>
         <div class="studentPopButtons" onclick="populateStudentFields(); loadStudentPhoto()">edit info</div>
         <div class="studentPopButtons" id="notesButton" onclick="pop(['studentPop','missionsPop','asPointsPop','mvPointsPop'],['notesPop','notesList']); populateNotes(['studentPop','missionsPop'])">notes</div>
-        <div class="studentPopButtons" id="photoButton" onclick="actionAlert('Confirm Add/Remove Photo',['studentPop','missionsPop'],togglePhoto)">photo</div>
+        <div class="studentPopButtons" id="photoButton" onclick="actionAlert('Toggle photo on/off?',['studentPop','missionsPop'],togglePhoto)">photo</div>
         <div class="studentPopButtons" onclick="loadStudentData()">properties</div>
         <div class="studentPopButtons" id="emailButton" onclick="populateStudentFields('editEmail')">email</div>
     </div>
